force-app/main/default/objects/Bank_Account__c/fields/Correspondent_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Correspondent_Account_Number__c</fullName>
    <label>Correspondent Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>