force-app/main/default/objects/Bank_Account__c/fields/IBAN_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Account_Number__c</fullName>
    <label>IBAN / Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>