force-app/main/default/objects/Bank_Account__c/fields/Intermediary_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Bank_Name__c</fullName>
    <label>Intermediary Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>