force-app/main/default/objects/Bank_Account__c/fields/Intermediary_SWIFT_BIC__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_SWIFT_BIC__c</fullName>
    <label>Intermediary SWIFT/BIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>