force-app/main/default/objects/Bank_Account__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <formula>Bank__r.Name + &apos; &apos; + TEXT(CurrencyIsoCode) + &apos; (...&apos; + RIGHT( IBAN_Account_Number__c , 4) + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Name</label>
    <type>Text</type>
</CustomField>